fixed selection overlaying issue + header overflow

--- a/app/less/common.less
+++ b/app/less/common.less
@@ -172,10 +172,20 @@ body {
 				padding-left: 10px;
 				border-left: 1px solid @onHeaderColor50;
 			}
+			
+			.itemInfo {
+				color: @onHeaderColor50;
+				font-size: 80%;
+			}
+			
+			h3, p {
+				overflow: hidden;
+				text-overflow: ellipsis;
+			}
 
 			h3 {
 				font-size: 18px;
-				line-height: 0.8;
+				line-height: 1;
 			}
 
 			p {
